[package]
name = "client"
version = "0.0.1"
edition = "2024"

[dependencies]
tokio        = { version = "1.40", features = ["full"] }
tokio-util   = { version = "0.7.16", features = ["codec"] }
futures      = "0.3"
clap         = { version = "4.5", features = ["derive"] }
log          = "0.4"
flexi_logger = "0.28"
server       = { path = "../server" }