[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
clap             = { version = "4.5", features = ["derive"] }  # Use clap with derive feature
flexi_logger     = { version="0.31", features=["colors", "async"] }  # default flexable logging implementation
log              = "0.4"  # common logging traits
tokio            = { version = "1.47", features = ["net", "rt-multi-thread", "macros", "signal", "time"] }
tokio-util       = { version = "0.7", features = ["codec"] }
futures          = "0.3"
num_cpus         = "1.17.0"
ahash            = "0.8.12"



